fixed user input data issue and date time issue
